Booklist, Habits, Movielist, Photog, Pluginista: Add color scheme to inputs in dark mode to fix calendar icon color in date input

--- a/apps/booklist/assets/css/site/_forms.scss
+++ b/apps/booklist/assets/css/site/_forms.scss
@@ -14,6 +14,7 @@
 	.form-control, .form-control:focus, .form-group select.form-control {
         background-color: #000;
         color: #fff;
+        color-scheme: dark;
     }
 }
 
