--- a/apps/habits/assets/css/_form.scss
+++ b/apps/habits/assets/css/_form.scss
@@ -28,6 +28,7 @@ form.inline {
     .form-control, .form-control:focus, .form-group select.form-control {
         background-color: #333;
         color: #fff;
+        color-scheme: dark;
     }
 }
 
