--- a/apps/movielist/assets/css/_form.scss
+++ b/apps/movielist/assets/css/_form.scss
@@ -18,5 +18,6 @@
 	.form-control, .form-control:focus, .form-group select.form-control {
         background-color: #000;
         color: #fff;
+        color-scheme: dark;
     }
 }
