--- a/apps/photog/assets/sass/site/_forms.scss
+++ b/apps/photog/assets/sass/site/_forms.scss
@@ -2,5 +2,6 @@
     .form-control, .form-control:focus {
         color: #fff;
         background-color: #000;
+        color-scheme: dark;
     }
 }
