--- a/apps/pluginista/assets/css/_form.scss
+++ b/apps/pluginista/assets/css/_form.scss
@@ -42,5 +42,6 @@
 	.form-control, .form-control:focus, .form-group select.form-control {
 		background-color: #000;
         color: #fff;
+        color-scheme: dark;
 	}
 }
